# once

./: .gitignore  .shellspec  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  autoresearch.checks.sh  autoresearch.jsonl  autoresearch.md  autoresearch.sh  blick.toml  cliff.toml  fabrik.star  fabrik.toml  file  mise.toml  once.toml
crates/fabrik-apple/: Cargo.toml
crates/fabrik-apple/src/: artifact.rs  compile.rs  lib.rs  plan.rs  swift.rs
crates/fabrik-cli/: Cargo.toml
crates/fabrik-cli/src/: cache_provider.rs  ci.rs  cli.rs  dispatch.rs  main.rs  planner.rs  render.rs
crates/fabrik-cli/src/cli/: auth.rs  cache.rs  deps.rs  runtime.rs
crates/fabrik-cli/src/commands/: auth.rs  build.rs  cache.rs  deps.rs  elixir_compile.rs  elixir_daemon.rs  exec.rs  mod.rs  run.rs  targets.rs  test.rs  toolchain.rs  util.rs  vendor.rs  vendor_elixir.rs  vendor_go.rs  vendor_rust.rs  vendor_swift.rs
crates/fabrik-cli/src/commands/init/: catalog.rs  human.rs  mod.rs  template.rs
crates/fabrik-cli/src/commands/run/: action.rs  apple_runtime.rs  output.rs  runtime_descriptor.rs  session.rs
crates/fabrik-cli/src/commands/runtime/: query.rs  server.rs
crates/fabrik-cli/src/commands/surface/: human.rs  mod.rs  model.rs
crates/fabrik-cli/src/commands/toolchain/: contract.rs  mise.rs  mod.rs
crates/fabrik-elixir/: Cargo.toml
crates/fabrik-elixir/elixir/: fabrik_compiler.exs
crates/fabrik-elixir/src/: artifact.rs  compile.rs  daemon.rs  lib.rs  plan.rs  protocol.rs
crates/fabrik-elixir/tests/: daemon_concurrent.rs
crates/fabrik-rust/: Cargo.toml
crates/fabrik-rust/src/: artifact.rs  build_script.rs  compile.rs  lib.rs  plan.rs
crates/once/: Cargo.toml  README.md  once.toml
crates/once-cas/: Cargo.toml  once.toml
crates/once-cas/src/: blob.rs  error.rs  lib.rs  model.rs  provider.rs
crates/once-cas/src/tuist/: auth.rs  cache.rs  mod.rs
crates/once-cas/src/tuist/auth/: oauth.rs  oidc.rs  registration.rs
crates/once-cas/tests/: persistence.rs
crates/once-cli/: Cargo.toml  once.toml
crates/once-cli/src/: cache_provider.rs  cli.rs  dispatch.rs  logging.rs  main.rs  reference.rs
crates/once-cli/src/cache_provider/: tuist_swift_config.rs
crates/once-cli/src/cli/: auth.rs  cache.rs  edit.rs  query.rs  runtime.rs  toolchain.rs
crates/once-cli/src/commands/: auth.rs  cache.rs  edit.rs  evidence.rs  exec.rs  graph.rs  mcp.rs  mod.rs  query.rs  run.rs  runtime.rs  util.rs
crates/once-cli/src/commands/apple/: destination.rs  devicectl.rs  mod.rs  simctl.rs
crates/once-cli/src/commands/edit/: example.rs
crates/once-cli/src/commands/graph/: action.rs  analysis.rs  contract.rs  mod.rs
crates/once-cli/src/commands/mcp/: script.rs  tools.rs
crates/once-cli/src/commands/query/: expression.rs  external_source.rs  script.rs  test_plan.rs
crates/once-cli/src/commands/run/: action.rs  output.rs  runtime_descriptor.rs  session.rs
crates/once-cli/src/commands/runtime/: protocol.rs  server.rs  session.rs  supervisor.rs
crates/once-cli/src/commands/surface/: model.rs
crates/once-cli/src/commands/test_schedule/: executor.rs  mod.rs  process.rs  results.rs  worker.rs
crates/once-cli/src/commands/toolchain/: contract.rs  human.rs  lock.rs  mise.rs  mod.rs  platform.rs
crates/once-cli/tests/: test_architecture.rs
crates/once-core/: Cargo.toml  once.toml
crates/once-core/examples/: sandbox_contract_benchmark.rs
crates/once-core/src/: action.rs  contract.rs  directory_blob.rs  env.rs  error.rs  execute.rs  execution_path.rs  file_blob.rs  input_digest.rs  lib.rs  local.rs  outputs.rs  path.rs  plan.rs  remote.rs  resources.rs  runner.rs  store.rs  stream.rs  test_plan.rs  xdg.rs
crates/once-core/src/env/: mise.rs  mise_runtime.rs  path.rs
crates/once-core/src/evidence/: entity.rs  migration.rs  mod.rs  record.rs  store.rs
crates/once-core/src/evidence/migration/: test_batch_attempts.rs
crates/once-core/src/remote/: archive.rs  daytona.rs  e2b.rs  microsandbox.rs  output_install.rs  path.rs  test_server.rs
crates/once-core/src/remote/archive/: input.rs  output.rs
crates/once-core/src/remote/daytona/: cleanup.rs  client.rs  transport.rs
crates/once-core/src/remote/e2b/: cleanup.rs  client.rs  protocol.rs  transport.rs
crates/once-core/src/remote/microsandbox/: input.rs  output.rs
crates/once-core/src/test_manifest/: mod.rs  tests.rs
crates/once-core/src/test_results/: mod.rs  tests.rs
crates/once-core/src/test_schedule/: entity.rs  mod.rs  store.rs  tests.rs
crates/once-core/tests/: runner.rs
crates/once-frontend/: Cargo.toml  build.rs  once.toml
crates/once-frontend/prelude/: android.star  apple.star  c.star  common.star  elixir.star  go.star  index.star  javascript.star  kotlin.star  python.star  ruby.star  rust.star  swift.star  zig.star
crates/once-frontend/prelude/examples/android-instrumentation-test-minimal/: AndroidManifest.xml  AndroidTestManifest.xml  once.toml
crates/once-frontend/prelude/examples/android-local-test-minimal/: AndroidManifest.xml  once.toml
crates/once-frontend/prelude/examples/apple-application-minimal/: _meta.toml
crates/once-frontend/prelude/examples/apple-framework-minimal/: _meta.toml
crates/once-frontend/prelude/examples/apple-library-minimal/: _meta.toml
crates/once-frontend/prelude/examples/c-library-minimal/: once.toml
crates/once-frontend/src/: analysis.rs  analysis_host.rs  cache_provider.rs  cache_resolution.rs  examples.rs  graph.rs  lib.rs  manifest.rs  manifest_editor.rs  module_contract.rs  modules.rs  resolution.rs  rules.rs  script.rs  target.rs  target_ref.rs  target_validator.rs  workspace.rs  workspace_validator.rs
crates/once-frontend/src/analysis/: engine.rs  globals.rs  mod.rs  store.rs  tests.rs  values.rs
crates/once-frontend/src/cache_resolution/: tests.rs  tuist_swift.rs  user.rs
crates/once-frontend/tests/: examples.rs  prelude.rs
crates/once/include/Once/: module.modulemap  once.h
crates/once/src/: action_key.rs  cache.rs  ffi.rs  lib.rs  sdk.rs
crates/once/src/cache/: tests.rs
crates/once/src/ffi/: protocol.rs  tests.rs
crates/once/swift/: Once.swift
(+678 files in other folders)
