[workspace]
resolver = "2"
members = [
    "crates/once",
    "crates/once-cli",
    "crates/once-core",
    "crates/once-cas",
    "crates/once-frontend",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/tuist/once"

[workspace.dependencies]
once = { version = "0.0.0", path = "crates/once" }
once-core = { version = "0.0.0", path = "crates/once-core", default-features = false }
once-cas = { version = "0.0.0", path = "crates/once-cas" }
once-frontend = { version = "0.0.0", path = "crates/once-frontend" }

anyhow = "1"
bazel-remote-apis = "0.27"
blake3 = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
glob = "0.3"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
starlark = "0.14.2"
toml = "1.0"
toon-rust = "0.1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-native-roots", "tls-ring"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schlussel = { git = "https://github.com/tuist/schlussel.git", rev = "80a7bc1fc0b68bdc2cd2379b16240ddbfbe0267b" }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1", features = ["v7"] }
walkdir = "2"
zstd = "0.13"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Pragmatic carve-outs from the pedantic group: documentation and
# enum-variant naming aren't worth gating builds on yet.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
