[package]
name = "fabrik-apple"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fabrik-cas.workspace = true
fabrik-core.workspace = true
fabrik-frontend.workspace = true

thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
