[package]
name = "fabrik-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fabrik"
path = "src/main.rs"

[dependencies]
fabrik-cas.workspace = true
fabrik-apple.workspace = true
fabrik-core.workspace = true
fabrik-elixir.workspace = true
fabrik-frontend.workspace = true
fabrik-rust.workspace = true

anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toon-rust.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
