[package]
name = "once-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "once"
path = "src/main.rs"

[dependencies]
once-cas.workspace = true
once-core = { workspace = true, features = ["remote-microsandbox"] }
once-frontend.workspace = true

anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
console.workspace = true
glob.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toon-rust.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
