[package]
name = "once-frontend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
glob.workspace = true
include_dir = "0.7"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
starlark.workspace = true
thiserror.workspace = true
toml.workspace = true
toml_edit = "0.25"
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
