[package]
name = "once"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK and C ABI for Once cache access"

[lib]
name = "once"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[features]
default = []
remote-microsandbox = ["once-core/remote-microsandbox"]

[dependencies]
once-cas.workspace = true
once-core.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
